# -MIA-Proyecto1_201902187

./: .gitignore  CMakeLists.txt  README.md  in.txt  main  main.cpp
funcionality/: admin.cpp  analysis.cpp  disk.cpp  filemanager.cpp  filesystem.cpp  mount.cpp  report.cpp  shared.cpp
headers/: admin.h  analysis.h  disk.h  filemanager.h  filesystem.h  mount.h  report.h  shared.h  structs.h
